<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/how_to_instructions_padding_top"
    android:paddingLeft="@dimen/how_to_instructions_padding"
    android:paddingStart="@dimen/how_to_instructions_padding"
    android:paddingRight="@dimen/how_to_instructions_padding"
    android:paddingEnd="@dimen/how_to_instructions_padding"
    android:paddingBottom="@dimen/how_to_instructions_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_one"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_two"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_three"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_four"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_five"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_six"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubheading"
        android:text="@string/how_to_step_seven"/>
</LinearLayout>
