<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mark_filtered_margin_top"
            android:paddingLeft="@dimen/mark_filtered_padding_left"
            android:paddingStart="@dimen/mark_filtered_padding_left"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:layout_weight="2"
            style="@style/TextSubheading"
            android:text="@string/mark_filtered"
            android:textColor="@color/colorDarkText"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/fragment_filter_switch_select_all_filtered_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mark_filtered_margin_top"
            android:layout_marginBottom="@dimen/mark_filtered_margin_bottom"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/mark_filtered_padding_left"
            android:paddingEnd="@dimen/mark_filtered_padding_left"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/fragment_filter_sort_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/sort_by_margin"
            android:layout_marginBottom="@dimen/sort_by_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sort_by_margin"
                android:paddingLeft="@dimen/sort_by_padding_left"
                android:paddingStart="@dimen/sort_by_padding_left"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                style="@style/TextSubheading"
                android:text="@string/sort"
                android:textColor="@color/colorDarkText"/>
            <TextView android:id="@+id/fragment_filter_displayed_sort_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sort_by_margin"
                android:paddingLeft="@dimen/sort_by_padding_left"
                android:paddingStart="@dimen/sort_by_padding_left"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                style="@style/TextBodyOne"
                android:textColor="@color/colorDarkTextCaptionLight"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_filter_filter_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_categories_margin"
        android:layout_marginBottom="@dimen/filter_categories_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/filter_categories_margin"
            android:paddingLeft="@dimen/filter_categories_padding_left"
            android:paddingStart="@dimen/filter_categories_padding_left"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            style="@style/TextSubheading"
            android:text="@string/categories"
            android:textColor="@color/colorDarkText"/>
        <TextView
            android:id="@+id/fragment_filter_displayed_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_categories_margin"
            android:paddingLeft="@dimen/filter_categories_padding_left"
            android:paddingStart="@dimen/filter_categories_padding_left"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            style="@style/TextBodyOne"
            android:text="@string/none"
            android:textColor="@color/colorDarkTextCaptionLight"/>

    </LinearLayout>
    <TextView
        android:id="@+id/fragment_filter_clear_categories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/clear_categories_height"
        android:paddingLeft="@dimen/clear_categories_padding_left"
        android:paddingStart="@dimen/clear_categories_padding_left"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:gravity="center_vertical"
        style="@style/TextSubheading"
        android:text="@string/clear_categories"
        android:textColor="@color/colorDarkText"/>

</LinearLayout>