<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">
    <ImageView android:id="@+id/fragment_add_restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/restaurant_image_description"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>
    <LinearLayout android:id="@+id/fragment_add_no_connectivity_place_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_connectivity_height"
        android:orientation="vertical"
        android:visibility="gone">
    </LinearLayout>
    <LinearLayout android:id="@+id/fragment_add_restaurant_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/fragment_add_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/restaurant_name_margin"
            android:layout_marginStart="@dimen/restaurant_name_margin"
            android:paddingTop="@dimen/restaurant_name_padding"
            android:layout_marginRight="@dimen/restaurant_name_margin"
            android:layout_marginEnd="@dimen/restaurant_name_margin"
            android:paddingBottom="@dimen/restaurant_name_margin"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/TextDisplayOne"
            android:textColor="@color/colorDarkText"/>
        <LinearLayout android:id="@+id/fragment_add_restaurant_reviews_and_ratings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView android:id="@+id/fragment_add_restaurant_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/restaurant_rating_padding_left"
                android:paddingLeft="@dimen/restaurant_rating_padding_left"
                android:paddingEnd="@dimen/restaurant_rating_padding_right"
                android:paddingRight="@dimen/restaurant_rating_padding_right"
                style="@style/TextSubheading"
                android:textColor="@color/colorDarkText"
                tools:text="4.5"/>
            <ImageView android:src="@drawable/five_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rating_image_description"/>
            <TextView android:id="@+id/fragment_add_restaurant_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/restaurant_reviews_padding_left"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingLeft="@dimen/restaurant_reviews_padding_left"
                style="@style/TextSubheading"
                android:textColor="@color/colorDarkText"
                tools:text="1450 reviews"/>
        </LinearLayout>
        <TextView android:id="@+id/fragment_add_restaurant_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/street_address_margin_top"
            android:layout_marginLeft="@dimen/street_address_margin"
            android:layout_marginStart="@dimen/street_address_margin"
            android:layout_marginRight="@dimen/street_address_margin"
            android:layout_marginEnd="@dimen/street_address_margin"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/TextSubheading"
            android:textColor="@color/colorDarkText"
            tools:text="13125 Andrew Young International Boulevard"/>
        <TextView
            android:id="@+id/fragment_add_restaurant_city_state_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/city_state_zip_margin"
            android:layout_marginStart="@dimen/city_state_zip_margin"
            android:layout_marginRight="@dimen/city_state_zip_margin"
            android:layout_marginEnd="@dimen/city_state_zip_margin"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/TextSubheading"
            android:textColor="@color/colorDarkText"
            tools:text="Atlanta, GA 92138"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="@dimen/info_button_margin"
            android:layout_marginBottom="@dimen/info_button_margin"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="end">
                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/fragment_add_restaurant_button_rectangle_dial"
                    android:layout_width="@dimen/info_button_call_width"
                    android:layout_height="@dimen/info_button_height"
                    android:textColor="@color/colorDarkText"
                    android:background="@color/colorWhite"
                    android:text="@string/call"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center">
                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/fragment_add_restaurant_button_rectangle_directions"
                    android:layout_width="@dimen/info_button_directions_width"
                    android:layout_height="@dimen/info_button_height"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorDarkText"
                    android:text="@string/directions"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="start">
                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/fragment_add_restaurant_button_rectangle_yelp"
                    android:layout_width="@dimen/info_button_yelp_width"
                    android:layout_height="@dimen/info_button_height"
                    android:background="@color/colorPrimary"
                    android:text="@string/yelp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/fragment_add_restaurant_thoughts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/thoughts_padding_left"
                android:paddingLeft="@dimen/thoughts_padding_left"
                android:paddingEnd="@dimen/thoughts_padding_right"
                android:paddingRight="@dimen/thoughts_padding_right"
                style="@style/TextSubheading"
                android:textColor="@color/colorDarkText"
                android:text="@string/thoughts"/>
            <ImageButton
                android:id="@+id/fragment_add_restaurant_image_button_add_thoughts"
                android:layout_width="@dimen/add_thoughts_diameter"
                android:layout_height="@dimen/add_thoughts_diameter"
                android:contentDescription="@string/add_thoughts_button_description"
                android:background="@drawable/button_square_rounded"
                android:src="@drawable/add_thought"/>
        </LinearLayout>
        <TableLayout
            android:id="@+id/fragment_add_restaurant_bullet_list_thoughts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/thoughts_bullet_list_margin"
            android:layout_marginLeft="@dimen/thoughts_bullet_list_margin"
            android:layout_marginEnd="@dimen/thoughts_bullet_list_margin"
            android:layout_marginRight="@dimen/thoughts_bullet_list_margin"
            android:layout_marginBottom="@dimen/thoughts_bullet_list_margin_bottom"/>
    </LinearLayout>
</LinearLayout>

