<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/category_dialog_padding"
        android:paddingBottom="@dimen/category_dialog_padding_bottom"
        android:paddingLeft="@dimen/category_dialog_padding"
        android:paddingRight="@dimen/category_dialog_padding"
        style="@style/TextTitle"
        android:text="@string/select_categories"
        android:textColor="@color/colorDarkText"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_dialog_title_divider_height"
        android:background="@color/colorDarkDivider"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_fragment_category_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_dialog_list_height"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_dialog_list_divider_height"
        android:background="@color/colorDarkDivider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/category_dialog_bottom_height">
            <Button android:id="@+id/dialog_fragment_category_button_done"
                android:layout_width="@dimen/category_dialog_positive_button_width"
                android:layout_height="@dimen/category_dialog_positive_button_height"
                android:layout_marginRight="@dimen/category_dialog_positive_button_margin"
                android:layout_marginEnd="@dimen/category_dialog_positive_button_margin"
                android:layout_marginTop="@dimen/category_dialog_positive_button_margin"
                android:layout_marginBottom="@dimen/category_dialog_positive_button_margin"
                android:layout_marginLeft="@dimen/category_dialog_positive_button_margin_left"
                android:layout_marginStart="@dimen/category_dialog_positive_button_margin_left"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/category_dialog_positive_button"
                android:textColor="@color/colorDialogButton"
                style="@style/TextButton"
                android:background="@drawable/button_square_rounded"/>
            <Button android:id="@+id/dialog_fragment_category_button_cancel"
                android:layout_width="@dimen/category_dialog_negative_button_width"
                android:layout_height="@dimen/category_dialog_negative_button_height"
                android:layout_marginRight="@dimen/category_dialog_negative_button_margin_right"
                android:layout_marginEnd="@dimen/category_dialog_negative_button_margin_right"
                android:layout_marginTop="@dimen/category_dialog_negative_button_margin"
                android:layout_marginBottom="@dimen/category_dialog_negative_button_margin"
                android:layout_marginLeft="@dimen/category_dialog_negative_button_margin"
                android:layout_marginStart="@dimen/category_dialog_negative_button_margin"
                android:layout_toLeftOf="@+id/dialog_fragment_category_button_done"
                android:layout_toStartOf="@+id/dialog_fragment_category_button_done"
                android:text="@string/category_dialog_negative_button"
                android:textColor="@color/colorDialogButton"
                style="@style/TextButton"
                android:background="@drawable/button_square_rounded"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>